Fixed aligning issue with rules section

--- a/style.css
+++ b/style.css
@@ -19,11 +19,9 @@ body {
 /* ----- HELPING CLASSES ----- */
 
 .center {
-  /* Positions box in the middle of the page*/
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .paper {
@@ -32,7 +30,11 @@ body {
 }
 
 .section_container {
-  /*position: relative;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
   height: 100vh;
   width: 100vw;
 }
@@ -89,16 +91,13 @@ body {
   transform: rotate(10deg);
 }
 
-.section_container {
-  position: relative;
-  height: 100vh;
-  width: 100vw;
-}
-
 /* ----- RULES ----- */
 
 .rules {
+  display: inline-block;
   padding: 20px;
+  margin: 10px;
+  font-size: 2rem;
 }
 
 /* ----- BOOK ----- */
